--- a/Ideas/More_ideas.ipynb
+++ b/Ideas/More_ideas.ipynb
@@ -12,7 +12,7 @@
     "$$h: \\mathcal{X} \\rightarrow p(\\mathcal{Y})$$\n",
     "\n",
     "The goal for active learning to come up with a rule $s(x; h)$ that gives each unlabeled example a score based only on their feature vector $x$ and the current regressor $h$. Recall that the regressor produces $p(\\mathcal{Y})$, a probability estimate for each label. We use these probability estimates from the regressor over the unlabeled examples to calculate the scores:\n",
-    "$$s:p(\\mathcal{Y})→\\mathbb{R}$$\n",
+    "$$s:p(\\mathcal{Y})\\rightarrow \\mathbb{R}$$\n",
     "\n",
     "The value of $s(x; h)$ indicates the informativeness of example $x$, where bigger is better. We would then label the example with the largest value of $s(x; h)$. This will be our active learning rule r:\n",
     "$$r(U;h) = {argmax}_{x \\in U} s(x;h)$$\n",
@@ -29,7 +29,7 @@
     "\n",
     "Consider the Bayesian linear regression setting, we obtain the (posterior) predictive distribution (assume Gaussian prior and likelihood):\n",
     "\n",
-    "$$p(y_\\ast | \\mathcal{X,Y}, x_\\ast) = \\int p(y_\\ast | x_ast, \\theta) p(\\theta | \\mathcal{X,Y}) d\\theta = \\mathcal{N} (y_\\ast | \\mu_\\ast, \\sigma_\\ast)$$\n",
+    "$$p(y_\\ast | \\mathcal{X,Y}, x_\\ast) = \\int p(y_\\ast | x_\\ast, \\theta) p(\\theta | \\mathcal{X,Y}) d\\theta = \\mathcal{N} (y_\\ast | \\mu_\\ast, \\sigma_\\ast)$$\n",
     "\n",
     "where $x_\\ast$ is test input and $y_\\ast$ is corresponding prediction. $\\sigma_\\ast$ reflects the posterior uncertainty associated with the parameter $\\theta$ and data noise. The predictive mean $\\mu_\\ast$ coincides with the MAP estimate.\n",
     "\n",
