--- a/Ideas/More_ideas.ipynb
+++ b/Ideas/More_ideas.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Consider the Bayesian linear regression setting, we obtain the (posterior) predictive distribution (assume Gaussian prior and likelihood):\n",
     "\n",
-    "$$p(y_\\ast | \\mathcal{X,Y}, x_\\ast) = \\int p(y_\\ast | x_\\ast, \\theta) p(\\theta | \\mathcal{X,Y}) d\\theta = \\mathcal{N} (y_\\ast | \\mu_\\ast, \\sigma_\\ast)$$\n",
+    "$$p(y_\\ast | \\mathcal{X}, \\mathcal{Y}, x_\\ast) = \\int p(y_\\ast | x_\\ast, \\theta) p(\\theta | \\mathcal{X}, \\mathcal{Y}) d\\theta = \\mathcal{N} (y_\\ast | \\mu_\\ast, \\sigma_\\ast)$$\n",
     "\n",
     "where $x_\\ast$ is test input and $y_\\ast$ is corresponding prediction. $\\sigma_\\ast$ reflects the posterior uncertainty associated with the parameter $\\theta$ and data noise. The predictive mean $\\mu_\\ast$ coincides with the MAP estimate.\n",
     "\n",
