Minor edits to clarify things

--- a/BregmanLR/notebook/BregmanLR_demo.ipynb
+++ b/BregmanLR/notebook/BregmanLR_demo.ipynb
@@ -251,7 +251,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -324,14 +324,15 @@
    "source": [
     "# Results\n",
     "\n",
-    "|               |Instances | Features| LR        | Bregman LR           | LR+L1  |Bregman LR+L1\n",
-    "| ------------- |:-------------:| -----:|                |         |\n",
+    "\n",
+    "| Dataset | Instances | Features | LR    | Bregman LR  | LR+L1  | Bregman LR+L1 |\n",
+    "|:--------|:---------:|:--------:|------:|------------:|-------:|--------------:|\n",
     "| MNIST      | 14780 | 784 | 99.8             | 99.6 |     99.1        |     99.9      |\n",
     "| Fashion MNIST|  14000 | 784 |   98.4  |   98.8 |     98.9      |     97.0          |\n",
     "| Ionosphere      | 351 | 35 | 98.0      |  88.2   |    90.2       |    86.3           |\n",
     "| Diabetes      | 768 | 8 |   82.7   |   73.7  |          83.6 |     72.7          |\n",
     "| Heart Statlog      |  270 | 13 |  89.7  |  87.2   |          87.2 |   89.7            |\n",
-    "| WDBC      | 569 | 30 |   98.8   |   90.2  |          95.1 |      86.6         |"
+    "| WDBC      | 569 | 30 |   98.8   |   90.2  |          95.1 |      86.6         |\n"
    ]
   },
   {
@@ -362,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
