use qreg library

--- a/QuantUCB/GP-UCB&Quant-UCB_ExpTwo.ipynb
+++ b/QuantUCB/GP-UCB&Quant-UCB_ExpTwo.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "##### TODO:\n",
     "\n",
-    "[TODO: theoritally prove how the upper quantile or beta changes for Quant-UCB.]\n",
+    "[TODO: theoretically prove how the upper quantile or beta changes for Quant-UCB.]\n",
     "\n",
     "[TODO: Kernel quantile regression optimization cross problem]\n",
     "\n",
@@ -37,9 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
