--- a/QuantUCB/Test for upper quantile idea.ipynb
+++ b/QuantUCB/Test for upper quantile idea.ipynb
@@ -395,9 +395,9 @@
    "source": [
     "Why 'linear' and 'square' design first sticking on the best arm but end up with having regret increasing continuely?\n",
     "\n",
-    "-- Whether to control the quantile level below to 0.5 seems to have no difference obvious. \n",
+    "-- limiting the quantile level below to 0.5 controls the regret increasing. \n",
     "\n",
-    "Whether 'log' desgin turns to increase after a few iteratiosn?"
+    "Why 'log' design has a stable regret after 1000 iterations? Is that true for other datasets?"
    ]
   },
   {
