--- a/writing/Paper_reading_notes/ref.bib
+++ b/writing/Paper_reading_notes/ref.bib
@@ -1,3 +1,19 @@
+@article{boucheron2012,
+author = "Boucheron, Stéphane and Thomas, Maud",
+doi = "10.1214/ECP.v17-2210",
+fjournal = "Electronic Communications in Probability",
+journal = "Electron. Commun. Probab.",
+pages = "12 pp.",
+pno = "51",
+publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
+title = "Concentration inequalities for order statistics",
+url = "https://doi.org/10.1214/ECP.v17-2210",
+volume = "17",
+year = "2012"
+}
+
+
+
 @article{auer2002finite,
   title={Finite-time analysis of the multiarmed bandit problem},
   author={Auer, Peter and Cesa-Bianchi, Nicolo and Fischer, Paul},
